<resources>
    <string name="app_name">SoptAndroidSeminar</string>
    <string name="sopthub_title">SOPTHub</string>
    <string name="signin_id">깃허브 아이디</string>
    <string name="signin_hint_id">깃허브 아이디를 입력해주세요</string>
    <string name="signin_pw">비밀번호</string>
    <string name="signin_hint_pw">비밀번호를 입력해주세요</string>
    <string name="signin_login">로그인</string>
    <string name="signup_ok">회원가입</string>
    <string name="signup_name">이름</string>
    <string name="signup_hint_id">이름을 입력해주세요</string>
    <string name="signup">회원가입</string>
    <string name="home_name">한승현</string>
    <string name="home_id">hansh0101</string>
    <string name="home_age">24</string>
    <string name="home_mbti">ENTP</string>
    <string name="home_intro">안녕하세요 한승현입니다.</string>
    <string name="home_btn_follower">팔로워 목록</string>
    <string name="home_btn_repo">레포지토리 목록</string>
    <string name="signin_not_member">계정이 없으신가요?</string>
    <string name="signup_title">회원가입</string>
    <string name="follower">팔로워</string>
    <string name="following">팔로잉</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_preparing">준비중입니다</string>
    <string name="text_github">GitHub</string>
    <string name="btn_camera">첨부하기</string>
    <string name="tv_camera">사진을 첨부해주세요</string>
    <string name="onboarding_skip">시작하기</string>
    <string name="onboarding_title">들어가며</string>
    <string name="fragment_one">Fragment One</string>
    <string name="fragment_three">Fragment Three</string>
    <string name="fragment_two">Fragment Two</string>
    <string name="onboarding_next">다음으로</string>
    <string name="setting_auto_login">자동로그인 해제</string>
    <string name="setting_delete_cache">로그인 캐시 삭제</string>
</resources>