<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/tv_home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="40dp"
        android:paddingBottom="20dp"
        android:text="@string/sopthub_title"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/img_home_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_home_profile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toTopOf="@id/cl_home_info"
        app:layout_constraintEnd_toEndOf="@id/tv_home_title"
        app:layout_constraintStart_toStartOf="@id/tv_home_title"
        app:layout_constraintTop_toBottomOf="@id/tv_home_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_home_info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingHorizontal="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_home_profile">

        <TextView
            android:id="@+id/tv_home_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_name"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/tv_home_age"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_home_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_age"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/tv_home_mbti"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_home_name" />

        <TextView
            android:id="@+id/tv_home_mbti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_mbti"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/tv_home_intro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_home_age" />

        <TextView
            android:id="@+id/tv_home_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_intro"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_home_mbti" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>