<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bubblegum"
    tools:context=".profile.ProfileFragment">

    <ImageView
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:id="@+id/img_profile_picture"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_profile_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img_profile_setting"
        android:src="@drawable/icon_setting_2_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="7dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_profile_name"
        android:text="@string/home_name"
        android:fontFamily="@font/notosanskr_bold"
        android:includeFontPadding="false"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_profile_id"
        app:layout_constraintTop_toBottomOf="@id/img_profile_picture"
        android:layout_marginTop="2dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_profile_id"
        android:text="@string/home_id"
        android:fontFamily="@font/notosanskr_regular"
        android:includeFontPadding="false"
        android:textSize="14sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_profile_intro"
        android:text="@string/home_intro"
        android:fontFamily="@font/notosanskr_medium"
        android:includeFontPadding="false"
        android:textSize="14sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_id"
        app:layout_constraintBottom_toTopOf="@id/cl_profile_recyclerview"
        android:layout_marginBottom="16dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/cl_profile_recyclerview"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="11dp"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_intro"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_list_follower"
            android:text="@string/home_btn_follower"
            android:fontFamily="@font/notosanskr_regular"
            android:includeFontPadding="false"
            android:textSize="14sp"
            android:textColor="@color/textview_title"
            android:background="@drawable/shape_unselected_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_list_repo"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="11dp"
            app:layout_constraintBottom_toTopOf="@id/fcv_list"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_list_repo"
            android:text="@string/home_btn_repo"
            android:fontFamily="@font/notosanskr_regular"
            android:includeFontPadding="false"
            android:textSize="14sp"
            android:textColor="@color/textview_title"
            android:background="@drawable/shape_unselected_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_list_follower"
            app:layout_constraintTop_toTopOf="@id/btn_list_follower"
            app:layout_constraintBottom_toBottomOf="@id/btn_list_follower"/>

        <androidx.fragment.app.FragmentContainerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/fcv_list"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_list_follower"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>