<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    tools:context=".view.signup.SignUpActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_signup_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:fontFamily="@font/notosanskr_bold"
                android:includeFontPadding="false"
                android:text="@string/signup_title"
                android:textColor="@color/textview_title"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@id/cl_signup_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_signup_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                app:layout_constraintBottom_toTopOf="@id/cl_signup_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_signup_title">

                <TextView
                    android:id="@+id/tv_signup_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosanskr_bold"
                    android:includeFontPadding="false"
                    android:text="@string/signup_name"
                    android:textColor="@color/textview_title"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@id/et_signup_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_signup_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/selector_textbox"
                    android:ellipsize="end"
                    android:fontFamily="@font/notosanskr_regular"
                    android:hint="@string/signup_hint_id"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/textview_title"
                    android:textColorHint="@color/edittext_hint"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_signup_name" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_signup_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                app:layout_constraintBottom_toTopOf="@id/cl_signup_pw"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_signup_name">

                <TextView
                    android:id="@+id/tv_signup_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosanskr_bold"
                    android:includeFontPadding="false"
                    android:text="@string/signin_id"
                    android:textColor="@color/textview_title"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@id/et_signup_id"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_signup_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/selector_textbox"
                    android:ellipsize="end"
                    android:fontFamily="@font/notosanskr_regular"
                    android:hint="@string/signin_hint_id"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/textview_title"
                    android:textColorHint="@color/edittext_hint"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_signup_id" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_signup_pw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp"
                app:layout_constraintBottom_toTopOf="@id/btn_signup_ok"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_signup_id">

                <TextView
                    android:id="@+id/tv_signup_pw"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosanskr_bold"
                    android:includeFontPadding="false"
                    android:text="@string/signin_pw"
                    android:textColor="@color/textview_title"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@id/et_signup_pw"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_signup_pw"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/selector_textbox"
                    android:ellipsize="end"
                    android:fontFamily="@font/notosanskr_regular"
                    android:hint="@string/signin_hint_pw"
                    android:includeFontPadding="false"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/textview_title"
                    android:textColorHint="@color/edittext_hint"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_signup_pw" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btn_signup_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="67dp"
                android:layout_marginBottom="74dp"
                android:background="@drawable/shape_button_sign"
                android:fontFamily="@font/notosanskr_bold"
                android:includeFontPadding="false"
                android:text="@string/signup"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_signup_pw" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>